--- a/LHN4Crypt-macOS/LHN4Encrypt/mainwindow.ui
+++ b/LHN4Crypt-macOS/LHN4Encrypt/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>LHN4Encrypt 1.1.3</string>
+   <string>LHN4Encrypt 1.1.4</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="inputBtn">
@@ -117,7 +117,7 @@
      </font>
     </property>
     <property name="text">
-     <string>LHN4Encrypt 加密器 版本: 1.1.3</string>
+     <string>LHN4Encrypt 加密器</string>
     </property>
    </widget>
   </widget>
